--- a/package.json
+++ b/package.json
@@ -3,9 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.6.4",
+    "cuid": "^2.1.6",
+    "date-fns": "^2.6.0",
+    "firebase": "^7.2.3",
+    "google-map-react": "^1.1.5",
+    "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "react": "^16.11.0",
+    "react-cropper": "^1.3.0",
+    "react-datepicker": "^2.9.6",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-dropzone": "^10.1.10",
+    "react-infinite-scroller": "^1.2.4",
+    "react-lazyload": "^2.6.2",
+    "react-places-autocomplete": "^7.2.1",
+    "react-redux": "^7.1.1",
+    "react-redux-firebase": "^3.0.4",
+    "react-redux-toastr": "^7.6.1",
+    "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
+    "redux-auth-wrapper": "^2.1.0",
+    "redux-firestore": "^0.9.0",
+    "redux-form": "^8.2.6",
+    "redux-thunk": "^2.3.0",
+    "revalidate": "^1.2.0",
+    "semantic-ui-react": "^0.88.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,5 +50,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-redux-toastr": "^7.6.0",
+    "@types/react-router-dom": "^5.1.2",
+    "redux-devtools-extension": "^2.13.8",
+    "source-map-explorer": "^2.1.0",
+    "typescript": "^3.6.4"
   }
 }
