--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^7.1.1",
     "react-redux-firebase": "^3.0.4",
     "react-redux-toastr": "^7.6.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-auth-wrapper": "^2.1.0",
