--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "google-map-react": "^1.1.5",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
-    "react": "^16.11.0",
+    "react": "^16.12.0",
     "react-cropper": "^1.3.0",
     "react-datepicker": "^2.9.6",
-    "react-dom": "^16.11.0",
+    "react-dom": "^16.12.0",
     "react-dropzone": "^10.1.10",
     "react-infinite-scroller": "^1.2.4",
     "react-lazyload": "^2.6.2",
@@ -22,7 +22,7 @@
     "react-redux-firebase": "^3.0.4",
     "react-redux-toastr": "^7.6.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.3.0",
     "redux": "^4.0.4",
     "redux-auth-wrapper": "^2.1.0",
     "redux-firestore": "^0.9.0",
